<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="30dp"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_company_name"
        android:padding="@dimen/view_padding"
        android:textSize="@dimen/add_edit_textsize" />

    <EditText
        android:id="@+id/edit_text_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_website"
        android:padding="@dimen/view_padding"
        android:textSize="@dimen/add_edit_textsize" />

    <EditText
        android:id="@+id/edit_text_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_phone_number"
        android:inputType="phone"
        android:padding="@dimen/view_padding"
        android:textSize="@dimen/add_edit_textsize" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/view_padding"
        android:textSize="@dimen/add_edit_textsize" />

    <EditText
        android:id="@+id/edit_text_products_services"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/add_products_services"
        android:padding="@dimen/view_padding"
        android:textSize="@dimen/add_edit_textsize" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/view_padding">

        <TextView
            android:id="@+id/text_view_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="25dp"
            android:text="@string/category"
            android:textSize="@dimen/add_edit_textsize" />

        <RadioGroup
            android:id="@+id/radio_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="25dp">

            <RadioButton
                android:id="@+id/radio_consulting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/string_consulting"
                android:textSize="@dimen/add_edit_textsize" />

            <RadioButton
                android:id="@+id/radio_custom_dev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_custom_dev"
                android:textSize="@dimen/add_edit_textsize" />

            <RadioButton
                android:id="@+id/radio_software_factory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_software_factory"
                android:textSize="@dimen/add_edit_textsize" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/button_add_update_company"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/button_padding"
        android:text="@string/add_company" />

</LinearLayout>